# e-motion

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  entities.yaml  main.py  pyproject.toml  requirements.txt  settings.py  skills.yaml
core/: data_loader.py  director.py  emotion.py  entity_data.py  event_manager.py  events.py  skill_data.py
core/ecs/: component.py  entity.py  factory.py  system.py
core/ecs/systems/: __init__.py  ai.py  biofeedback.py  combat.py  input.py  lifecycle.py  movement.py  render.py  skill.py  spawning.py
core/game_state/: base.py  base_state.py  gameplay_state.py  state_manager.py
core/ml/: wrapper.py
core/ml/vision/: __init__.py  config.py  dataset.py  inference.py  train.py  utils.py
core/utils/: lerp.py
fer_loader/: __init__.py  augmentations.py  config.py  dataloader.py  dataset.py  logger.py  main.py  utils.py
game_balancing_system/: config.py  main.py  requirements.txt
game_balancing_system/core/: preset_mapping.py
game_balancing_system/data_pipeline/: generator.py  labeler.py
game_balancing_system/model/: analyzer.py  classifier.py  trainer.py
game_balancing_system/tests/: test_api.ps1
ml/: wrapper.py
ml/state/: config.py  constants.py  inference.py  main.py  pyproject.toml  requirements.txt
ml/state/core/: preset_mapping.py
ml/state/data/models/: synthetic_reset_prototypes_stats.npy
ml/state/data_pipeline/: generator.py  labeler.py
ml/state/model/: analyzer.py  classifier.py  trainer.py
ml/vision/: __init__.py  config.py  dataset.py  inference.py  models.py  utils.py
research/: README.md
research/fer_loader/: __init__.py  augmentations.py  config.py  dataloader.py  dataset.py  logger.py  main.py  requirements.txt  utils.py
research/state/: main.py
research/state/data_pipeline/: generator.py  labeler.py
research/state/model/: analyzer.py  classifier.py  trainer.py
research/state/tests/: test_api.ps1  test_api.sh
research/vision/: dataset.py  train.py
tests/: test_integration.py
train/: emotional_balance_sample.csv
weights/: director.npy
