[project]
name = "e-motion"
version = "0.1.0"
description = "A vampire-like survivor game driven by player emotions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"