[project]
name = "e-motion"
version = "0.1.0"
description = "A vampire-like survivor game driven by player emotions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "opencv-python>=4.8.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pydantic>=2.12.4",
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "asyncio>=4.0.0",
    "aiohttp>=3.13.2",
    "plotly>=6.5.0",
    "scipy>=1.15.3",
    "albumentations>=2.0.8",
]

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.mypy]
python_version = "3.13"
explicit_package_bases = true
ignore_missing_imports = true
exclude = [".venv", "build", "dist"]

# Adding specific settings so as not to stifle development
disallow_untyped_defs = false      # Do not require types for all functions (yet)
disallow_incomplete_defs = true    # But if you start typing, do it to the end
check_untyped_defs = true          # Check the body of untyped functions

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.uv.workspace]
members = ["game_balancing_system"]
