[project]
name = "game-balancing-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi>=0.122.0",
    "joblib>=1.5.2",
    "loguru>=0.7.3",
    "numpy>=2.2.6",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
